--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>TO-DO-List</title>
+  <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
-  <h1></h1>
 
+ <h1>To Do List</h1>
+  <div>
+    <input id="newTask" type="text">
+    <button style = "color:green" calss= "button" id="newTaskSubmit">Add New Task</button>
+  </div>
+  <div  id="taskList">
+    <ol style = "color:green; margin: 0">
+    </ol>
+  </div>
+
+
+
+
+  <script src="./index.js"></script>
 </body>
 </html>
